[package]
name = "diesel-example"
version = "1.0.0"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Rob Ede <robjtede@icloud.com>",
]
edition = "2018"

[dependencies]
actix-web = "3"
diesel = { version = "1", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15"
env_logger = "0.8"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { git = "https://github.com/xFrednet/validator.git", branch="038-custom-validator-argument", features = ["derive"] }
#validator = { version = "0.12", features = ["derive"] }
